@@ -23,87 +23,95 @@ netMap['us-east-2c'] = 'subnet-00b3df129e7d8c658'
 
 // TODO We use rhel label here, in reality it's a RHEL-compatible derivative.
 imageMap = [:]
-imageMap['us-east-2a.min-rhel-8-x64']     = 'ami-0426a691fd088149c'               // rocky linux 8
-imageMap['us-east-2a.min-ol-8-x64']       = 'ami-0eeed66f8f65afdba'               // oraclelinux 8.9
-imageMap['us-east-2a.min-rhel-9-x64']     = 'ami-0b5a1d936f517ad3e'               // oraclelinux 9.3
-imageMap['us-east-2a.min-ol-9-x64']       = imageMap['us-east-2a.min-rhel-9-x64'] // oraclelinux 9.3
-imageMap['us-east-2a.min-focal-x64']      = 'ami-0f511dde9605eb0b6'               // ubuntu 20
-imageMap['us-east-2a.min-jammy-x64']      = 'ami-003932de22c285676'               // ubuntu 22
-imageMap['us-east-2a.min-noble-x64']      = 'ami-0cb1abde5aafd0260'               // ubuntu 24
-imageMap['us-east-2a.min-bullseye-x64']   = 'ami-039026ca4c44ea7da'               // debian 11
-imageMap['us-east-2a.min-bookworm-x64']   = 'ami-0b40807e5dc1afecf'               // debian 12
+imageMap['us-east-2a.min-rhel-8-x64']     = 'ami-0eeed66f8f65afdba'                 // oraclelinux 8.9
+imageMap['us-east-2a.min-ol-8-x64']       = imageMap['us-east-2a.min-rhel-8-x64']   // oraclelinux 8.9
+imageMap['us-east-2a.min-rhel-9-x64']     = 'ami-0b5a1d936f517ad3e'                 // oraclelinux 9.3
+imageMap['us-east-2a.min-ol-9-x64']       = imageMap['us-east-2a.min-rhel-9-x64']   // oraclelinux 9.3
+imageMap['us-east-2a.min-alma-10-x64']    = 'ami-06be7a8dff9965741'                 // almalinux 10
+imageMap['us-east-2a.min-jammy-x64']      = 'ami-085438ce84ab3ac76'                 // ubuntu 22
+imageMap['us-east-2a.min-noble-x64']      = 'ami-0d1b5a8c13042c939'                 // ubuntu 24
+imageMap['us-east-2a.min-bullseye-x64']   = 'ami-0434754593ce7b895'                 // debian 11
+imageMap['us-east-2a.min-bookworm-x64']   = 'ami-065eb7eeb82248b49'                 // debian 12
+imageMap['us-east-2a.min-trixie-x64']     = 'ami-0e4a9a71af7af46ff'                 // debian 13
 
 imageMap['us-east-2b.min-rhel-8-x64']     = imageMap['us-east-2a.min-rhel-8-x64']
-imageMap['us-east-2b.min-ol-8-x64']       = imageMap['us-east-2a.min-ol-8-x64']   // oraclelinux 8
+imageMap['us-east-2b.min-ol-8-x64']       = imageMap['us-east-2a.min-ol-8-x64']     // oraclelinux 8
 imageMap['us-east-2b.min-rhel-9-x64']     = imageMap['us-east-2a.min-rhel-9-x64']
-imageMap['us-east-2b.min-ol-9-x64']       = imageMap['us-east-2a.min-rhel-9-x64'] // oraclelinux 9
-imageMap['us-east-2b.min-focal-x64']      = imageMap['us-east-2a.min-focal-x64']
+imageMap['us-east-2b.min-ol-9-x64']       = imageMap['us-east-2a.min-rhel-9-x64']   // oraclelinux 9
+imageMap['us-east-2b.min-alma-10-x64']    = imageMap['us-east-2a.min-alma-10-x64']  // almalinux 10
 imageMap['us-east-2b.min-jammy-x64']      = imageMap['us-east-2a.min-jammy-x64']
 imageMap['us-east-2b.min-noble-x64']      = imageMap['us-east-2a.min-noble-x64']
 imageMap['us-east-2b.min-bullseye-x64']   = imageMap['us-east-2a.min-bullseye-x64']
 imageMap['us-east-2b.min-bookworm-x64']   = imageMap['us-east-2a.min-bookworm-x64']
+imageMap['us-east-2b.min-trixie-x64']     = imageMap['us-east-2a.min-trixie-x64']
 
 imageMap['us-east-2c.min-rhel-8-x64']     = imageMap['us-east-2a.min-rhel-8-x64']
-imageMap['us-east-2c.min-ol-8-x64']       = imageMap['us-east-2a.min-ol-8-x64']   // oraclelinux 8
+imageMap['us-east-2c.min-ol-8-x64']       = imageMap['us-east-2a.min-ol-8-x64']     // oraclelinux 8
 imageMap['us-east-2c.min-rhel-9-x64']     = imageMap['us-east-2a.min-rhel-9-x64']
-imageMap['us-east-2c.min-ol-9-x64']       = imageMap['us-east-2a.min-rhel-9-x64'] // oraclelinux 9
-imageMap['us-east-2c.min-focal-x64']      = imageMap['us-east-2a.min-focal-x64']
+imageMap['us-east-2c.min-ol-9-x64']       = imageMap['us-east-2a.min-rhel-9-x64']   // oraclelinux 9
+imageMap['us-east-2c.min-alma-10-x64']    = imageMap['us-east-2a.min-alma-10-x64']  // almalinux 10
 imageMap['us-east-2c.min-jammy-x64']      = imageMap['us-east-2a.min-jammy-x64']
 imageMap['us-east-2c.min-noble-x64']      = imageMap['us-east-2a.min-noble-x64']
 imageMap['us-east-2c.min-bullseye-x64']   = imageMap['us-east-2a.min-bullseye-x64']
 imageMap['us-east-2c.min-bookworm-x64']   = imageMap['us-east-2a.min-bookworm-x64']
+imageMap['us-east-2c.min-trixie-x64']     = imageMap['us-east-2a.min-trixie-x64']
 
 // ARM64 based AMIs
 imageMap['us-east-2a.min-ol-8-arm64']       = 'ami-0f77cbbab56907b6c'               // oraclelinux 8.9 arm64
 imageMap['us-east-2a.min-ol-9-arm64']       = 'ami-0ffbdb6ee492c2cd5'               // oraclelinux 9.3 arm64
-imageMap['us-east-2a.min-focal-arm64']      = 'ami-0c9212cf4cd1d5894'               // ubuntu 20.04 arm64
-imageMap['us-east-2a.min-jammy-arm64']      = 'ami-03772d93fb1879bbe'               // ubuntu 22.04 arm64
-imageMap['us-east-2a.min-noble-arm64']      = 'ami-0e9af7032a7f96163'               // ubuntu 24.04 arm64
-imageMap['us-east-2a.min-bullseye-arm64']   = 'ami-0bdce15f646d6ffc5'               // debian 11 arm64
-imageMap['us-east-2a.min-bookworm-arm64']   = 'ami-093aaca871a94bd3a'               // debian 12 arm64
+imageMap['us-east-2a.min-alma-10-arm64']    = 'ami-0f5ead2bc98a63a65'               // almalinux 10 arm64
+imageMap['us-east-2a.min-jammy-arm64']      = 'ami-0f732d76e7fad24ca'               // ubuntu 22.04 arm64
+imageMap['us-east-2a.min-noble-arm64']      = 'ami-019eeff96c2865995'               // ubuntu 24.04 arm64
+imageMap['us-east-2a.min-bullseye-arm64']   = 'ami-0d0902423ff93b14f'               // debian 11 arm64
+imageMap['us-east-2a.min-bookworm-arm64']   = 'ami-0de4c77901001cfe7'               // debian 12 arm64
+imageMap['us-east-2a.min-trixie-arm64']     = 'ami-0e80837acd137142b'               // debian 13 arm64
 
 imageMap['us-east-2b.min-ol-8-arm64']       = imageMap['us-east-2a.min-ol-8-arm64']
 imageMap['us-east-2b.min-ol-9-arm64']       = imageMap['us-east-2a.min-ol-9-arm64']
-imageMap['us-east-2b.min-focal-arm64']      = imageMap['us-east-2a.min-focal-arm64']
+imageMap['us-east-2b.min-alma-10-arm64']    = imageMap['us-east-2a.min-alma-10-arm64']
 imageMap['us-east-2b.min-jammy-arm64']      = imageMap['us-east-2a.min-jammy-arm64']
 imageMap['us-east-2b.min-noble-arm64']      = imageMap['us-east-2a.min-noble-arm64']
 imageMap['us-east-2b.min-bullseye-arm64']   = imageMap['us-east-2a.min-bullseye-arm64']
 imageMap['us-east-2b.min-bookworm-arm64']   = imageMap['us-east-2a.min-bookworm-arm64']
+imageMap['us-east-2b.min-trixie-arm64']     = imageMap['us-east-2a.min-trixie-arm64']
 
 imageMap['us-east-2c.min-ol-8-arm64']       = imageMap['us-east-2a.min-ol-8-arm64']
 imageMap['us-east-2c.min-ol-9-arm64']       = imageMap['us-east-2a.min-ol-9-arm64']
-imageMap['us-east-2c.min-focal-arm64']      = imageMap['us-east-2a.min-focal-arm64']
+imageMap['us-east-2c.min-alma-10-arm64']    = imageMap['us-east-2a.min-alma-10-arm64']
 imageMap['us-east-2c.min-jammy-arm64']      = imageMap['us-east-2a.min-jammy-arm64']
 imageMap['us-east-2c.min-noble-arm64']      = imageMap['us-east-2a.min-noble-arm64']
 imageMap['us-east-2c.min-bullseye-arm64']   = imageMap['us-east-2a.min-bullseye-arm64']
 imageMap['us-east-2c.min-bookworm-arm64']   = imageMap['us-east-2a.min-bookworm-arm64']
+imageMap['us-east-2c.min-trixie-arm64']     = imageMap['us-east-2a.min-trixie-arm64']
 
 priceMap = [:]
 priceMap['t2.large']   = '0.045'
 priceMap['t3.xlarge']  = '0.065'
 priceMap['t3.large']   = '0.035'
 priceMap['m4.large']   = '0.060'
-priceMap['m6a.large']  = '0.060'
-priceMap['m7g.large']  = '0.035' // arm64 instancey type
+priceMap['m7a.large']  = '0.044' // amd64 instance type - vCPU=2, memory=8GiB, saving=73%, interruption='<5%', price=0.03
+priceMap['m7g.large']  = '0.042' // arm64 instance type - vCPU=2, memory=8GiB, saving=63%, interruption='<5%', price=0.03
 
 userMap = [:]
-userMap['min-rhel-8-x64']      = 'rocky'
+userMap['min-rhel-8-x64']      = 'ec2-user'
 userMap['min-ol-8-x64']        = 'ec2-user'
 userMap['min-rhel-9-x64']      = 'ec2-user'
 userMap['min-ol-9-x64']        = 'ec2-user'
-userMap['min-focal-x64']       = 'ubuntu'
+userMap['min-alma-10-x64']     = 'ec2-user'
 userMap['min-jammy-x64']       = 'ubuntu'
 userMap['min-noble-x64']       = 'ubuntu'
 userMap['min-bullseye-x64']    = 'admin'
 userMap['min-bookworm-x64']    = 'admin'
+userMap['min-trixie-x64']      = 'admin'
 
 userMap['min-ol-8-arm64']      = 'ec2-user'
 userMap['min-ol-9-arm64']      = 'ec2-user'
-userMap['min-focal-arm64']     = 'ubuntu'
+userMap['min-alma-10-arm64']   = 'ec2-user'
 userMap['min-jammy-arm64']     = 'ubuntu'
 userMap['min-noble-arm64']     = 'ubuntu'
 userMap['min-bullseye-arm64']  = 'admin'
 userMap['min-bookworm-arm64']  = 'admin'
+userMap['min-trixie-arm64']    = 'admin'
 
 initMap = [:]
 
@@ -129,20 +137,13 @@ initMap['rpmMap'] = '''
     10.30.6.9 repo.ci.percona.com
     "     | sudo tee -a /etc/hosts
 
-    if [[ $SYSREL -eq 2 ]]; then
-        sudo sysctl -w fs.inotify.max_user_watches=10000000 || true
-        sudo sysctl -w fs.aio-max-nr=1048576 || true
-        sudo sysctl -w fs.file-max=6815744 || true
-        echo "*  soft  core  unlimited" | sudo tee -a /etc/security/limits.conf
-        sudo amazon-linux-extras install epel java-openjdk11 -y
-        PKGLIST="tar coreutils p7zip"
-    elif [[ $SYSREL -eq 7 ]]; then
-        PKGLIST="tar coreutils java-11-openjdk"
+    if [[ $SYSREL -ge 10 ]]; then
+        PKGLIST="tar coreutils java-21-openjdk-headless tzdata-java"
     elif [[ $SYSREL -ge 8 ]]; then
         PKGLIST="tar coreutils java-11-openjdk tzdata-java"
     fi
 
-    if [[ ${RHVER} -eq 8 ]] || [[ ${RHVER} -eq 7 ]]; then
+    if [[ ${RHVER} -eq 8 ]]; then
         sudo sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-*
         sudo sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-*
     fi
@@ -153,24 +154,6 @@ initMap['rpmMap'] = '''
     done
 
     sudo yum -y install git ${PKGLIST} || :
-    aws --version || :
-    sudo yum -y remove aws-cli || :
-
-    if [[ $SYSREL -eq 2 ]]; then
-        if ! $(aws --version | grep -q 'aws-cli/2'); then
-            find /tmp -maxdepth 1 -name "*aws*" | xargs sudo rm -rf
-
-            until curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "/tmp/awscliv2.zip"; do
-                sleep 1
-                echo try again
-            done
-
-            7za -o/tmp x /tmp/awscliv2.zip
-            cd /tmp/aws && sudo ./install
-            aws --version || :
-        fi
-    fi
-
     sudo install -o $(id -u -n) -g $(id -g -n) -d /mnt/jenkins
 
 '''
@@ -192,6 +175,13 @@ initMap['debMap'] = '''
 
     echo '10.30.6.9 repo.ci.percona.com' | sudo tee -a /etc/hosts
 
+    DEB_VERSION=$(lsb_release -sc)
+
+    # Remove bullseye-backports entries from sources.list
+    if [[ ${DEB_VERSION} == "bullseye" ]]; then
+        sudo sed -i '/bullseye-backports/d' /etc/apt/sources.list
+    fi
+
     until sudo apt-get update; do
         sleep 1
         echo try again
@@ -202,22 +192,22 @@ initMap['debMap'] = '''
         echo try again
     done
 
-
-    DEB_VERSION=$(lsb_release -sc)
-    if [[ ${DEB_VERSION} == "bookworm" ]]; then
+    if [ "${DEB_VERSION}" == "trixie" ]; then
+        JDK_PACKAGE="openjdk-21-jdk-headless"
+    elif [ "${DEB_VERSION}" == "bookworm" ]; then
         JDK_PACKAGE="openjdk-17-jre-headless"
     else
         JDK_PACKAGE="openjdk-11-jre-headless"
     fi
 
-    if [[ ${DEB_VERSION} == "bookworm" ]]; then
-        sudo DEBIAN_FRONTEND=noninteractive sudo apt-get -y install ${JDK_PACKAGE} git
+    if [ "${DEB_VERSION}" = "bookworm" ] || [ "${DEB_VERSION}" = "trixie" ]; then
+        sudo DEBIAN_FRONTEND=noninteractive apt-get -y install ${JDK_PACKAGE} git
         sudo mv /etc/ssl /etc/ssl_old
-        sudo DEBIAN_FRONTEND=noninteractive sudo apt-get -y install ${JDK_PACKAGE}
+        sudo DEBIAN_FRONTEND=noninteractive apt-get -y install ${JDK_PACKAGE}
         sudo cp -r /etc/ssl_old /etc/ssl
-        sudo DEBIAN_FRONTEND=noninteractive sudo apt-get -y install ${JDK_PACKAGE}
+        sudo DEBIAN_FRONTEND=noninteractive apt-get -y install ${JDK_PACKAGE}
     else
-        sudo DEBIAN_FRONTEND=noninteractive sudo apt-get -y install ${JDK_PACKAGE} git
+        sudo DEBIAN_FRONTEND=noninteractive apt-get -y install ${JDK_PACKAGE} git
     fi
 
     sudo install -o $(id -u -n) -g $(id -g -n) -d /mnt/jenkins
@@ -228,121 +218,134 @@ initMap['min-rhel-8-x64']     = initMap['rpmMap']
 initMap['min-ol-8-x64']       = initMap['rpmMap']
 initMap['min-rhel-9-x64']     = initMap['rpmMap']
 initMap['min-ol-9-x64']       = initMap['rpmMap']
-initMap['min-focal-x64']      = initMap['debMap']
+initMap['min-alma-10-x64']    = initMap['rpmMap']
 initMap['min-jammy-x64']      = initMap['debMap']
 initMap['min-noble-x64']      = initMap['debMap']
 initMap['min-bullseye-x64']   = initMap['debMap']
 initMap['min-bookworm-x64']   = initMap['debMap']
+initMap['min-trixie-x64']     = initMap['debMap']
 
 initMap['min-ol-8-arm64']     = initMap['rpmMap']
 initMap['min-ol-9-arm64']     = initMap['rpmMap']
-initMap['min-focal-arm64']    = initMap['debMap']
+initMap['min-alma-10-arm64']  = initMap['rpmMap']
 initMap['min-jammy-arm64']    = initMap['debMap']
 initMap['min-noble-arm64']    = initMap['debMap']
 initMap['min-bullseye-arm64'] = initMap['debMap']
 initMap['min-bookworm-arm64'] = initMap['debMap']
+initMap['min-trixie-arm64']   = initMap['debMap']
 
 capMap = [:]
 capMap['t2.large']   = '20'
 capMap['t3.xlarge']  = '20'
 capMap['t3.large']   = '20'
 capMap['m4.large']   = '10'
-capMap['m6a.large']  = '15'
+capMap['m7a.large']  = '15' // amd64 instance type
+capMap['m7g.large']  = '15' // arm64 instance type
 
 typeMap = [:]
-typeMap['min-rhel-8-x64']     = 'm6a.large'
+typeMap['min-rhel-8-x64']     = 'm7a.large'
 typeMap['min-ol-8-x64']       = typeMap['min-rhel-8-x64']
 typeMap['min-rhel-9-x64']     = typeMap['min-rhel-8-x64']
 typeMap['min-ol-9-x64']       = typeMap['min-rhel-8-x64']
-typeMap['min-focal-x64']      = typeMap['min-rhel-8-x64']
+typeMap['min-alma-10-x64']    = typeMap['min-rhel-8-x64']
 typeMap['min-jammy-x64']      = typeMap['min-rhel-8-x64']
 typeMap['min-noble-x64']      = typeMap['min-rhel-8-x64']
 typeMap['min-bullseye-x64']   = typeMap['min-rhel-8-x64']
 typeMap['min-bookworm-x64']   = typeMap['min-rhel-8-x64']
+typeMap['min-trixie-x64']     = typeMap['min-rhel-8-x64']
 
 typeMap['min-ol-8-arm64']     = 'm7g.large'
 typeMap['min-ol-9-arm64']     = typeMap['min-ol-8-arm64']
-typeMap['min-focal-arm64']    = typeMap['min-ol-8-arm64']
+typeMap['min-alma-10-arm64']  = typeMap['min-ol-8-arm64']
 typeMap['min-jammy-arm64']    = typeMap['min-ol-8-arm64']
 typeMap['min-noble-arm64']    = typeMap['min-ol-8-arm64']
 typeMap['min-bullseye-arm64'] = typeMap['min-ol-8-arm64']
 typeMap['min-bookworm-arm64'] = typeMap['min-ol-8-arm64']
+typeMap['min-trixie-arm64']   = typeMap['min-ol-8-arm64']
 
 execMap = [:]
 execMap['min-rhel-8-x64']     = '1'
 execMap['min-ol-8-x64']       = '1'
 execMap['min-rhel-9-x64']     = '1'
 execMap['min-ol-9-x64']       = '1'
-execMap['min-focal-x64']      = '1'
+execMap['min-alma-10-x64']    = '1'
 execMap['min-jammy-x64']      = '1'
 execMap['min-noble-x64']      = '1'
 execMap['min-bullseye-x64']   = '1'
 execMap['min-bookworm-x64']   = '1'
+execMap['min-trixie-x64']     = '1'
 
 execMap['min-ol-8-arm64']     = '1'
 execMap['min-ol-9-arm64']     = '1'
-execMap['min-focal-arm64']    = '1'
+execMap['min-alma-10-arm64']  = '1'
 execMap['min-jammy-arm64']    = '1'
 execMap['min-noble-arm64']    = '1'
 execMap['min-bullseye-arm64'] = '1'
 execMap['min-bookworm-arm64'] = '1'
+execMap['min-trixie-arm64']   = '1'
 
 devMap = [:]
 devMap['min-rhel-8-x64']     = '/dev/sda1=:80:true:gp3,/dev/sdd=:20:true:gp3'
 devMap['min-ol-8-x64']       = devMap['min-rhel-8-x64']
 devMap['min-rhel-9-x64']     = devMap['min-rhel-8-x64']
 devMap['min-ol-9-x64']       = devMap['min-rhel-8-x64']
-devMap['min-focal-x64']      = devMap['min-rhel-8-x64']
+devMap['min-alma-10-x64']    = devMap['min-rhel-8-x64']
 devMap['min-jammy-x64']      = devMap['min-rhel-8-x64']
 devMap['min-noble-x64']      = devMap['min-rhel-8-x64']
 devMap['min-bullseye-x64']   = '/dev/xvda=:80:true:gp3,/dev/xvdd=:20:true:gp3'
 devMap['min-bookworm-x64']   = '/dev/xvda=:80:true:gp3,/dev/xvdd=:20:true:gp3'
+devMap['min-trixie-x64']     = '/dev/xvda=:80:true:gp3,/dev/xvdd=:20:true:gp3'
 
 devMap['min-ol-8-arm64']     = devMap['min-rhel-8-x64']
 devMap['min-ol-9-arm64']     = devMap['min-rhel-8-x64']
-devMap['min-focal-arm64']    = devMap['min-rhel-8-x64']
+devMap['min-alma-10-arm64']  = devMap['min-rhel-8-x64']
 devMap['min-jammy-arm64']    = devMap['min-rhel-8-x64']
 devMap['min-noble-arm64']    = devMap['min-rhel-8-x64']
 devMap['min-bullseye-arm64'] = '/dev/xvda=:80:true:gp3,/dev/xvdd=:20:true:gp3'
 devMap['min-bookworm-arm64'] = '/dev/xvda=:80:true:gp3,/dev/xvdd=:20:true:gp3'
+devMap['min-trixie-arm64']   = '/dev/xvda=:80:true:gp3,/dev/xvdd=:20:true:gp3'
 
 labelMap = [:]
 labelMap['min-rhel-8-x64']     = 'min-rhel-8-x64'
 labelMap['min-ol-8-x64']       = 'min-ol-8-x64'
 labelMap['min-rhel-9-x64']     = 'min-rhel-9-x64'
 labelMap['min-ol-9-x64']       = 'min-ol-9-x64'
-labelMap['min-focal-x64']      = 'min-focal-x64'
+labelMap['min-alma-10-x64']    = 'min-alma-10-x64'
 labelMap['min-jammy-x64']      = 'min-jammy-x64'
 labelMap['min-noble-x64']      = 'min-noble-x64'
 labelMap['min-bullseye-x64']   = 'min-bullseye-x64'
 labelMap['min-bookworm-x64']   = 'min-bookworm-x64'
+labelMap['min-trixie-x64']     = 'min-trixie-x64'
 
 labelMap['min-ol-8-arm64']     = 'min-ol-8-arm64'
 labelMap['min-ol-9-arm64']     = 'min-ol-9-arm64'
-labelMap['min-focal-arm64']    = 'min-focal-arm64'
+labelMap['min-alma-10-arm64']  = 'min-alma-10-arm64'
 labelMap['min-jammy-arm64']    = 'min-jammy-arm64'
 labelMap['min-noble-arm64']    = 'min-noble-arm64'
 labelMap['min-bullseye-arm64'] = 'min-bullseye-arm64'
 labelMap['min-bookworm-arm64'] = 'min-bookworm-arm64'
+labelMap['min-trixie-arm64']   = 'min-trixie-arm64'
 
 jvmoptsMap = [:]
 jvmoptsMap['min-rhel-8-x64']     = '-Xmx512m -Xms512m'
 jvmoptsMap['min-ol-8-x64']       = jvmoptsMap['min-rhel-8-x64']
 jvmoptsMap['min-rhel-9-x64']     = jvmoptsMap['min-rhel-8-x64']
 jvmoptsMap['min-ol-9-x64']       = jvmoptsMap['min-rhel-8-x64']
-jvmoptsMap['min-focal-x64']      = jvmoptsMap['min-rhel-8-x64']
+jvmoptsMap['min-alma-10-x64']    = jvmoptsMap['min-rhel-8-x64']
 jvmoptsMap['min-jammy-x64']      = jvmoptsMap['min-rhel-8-x64']
 jvmoptsMap['min-noble-x64']      = jvmoptsMap['min-rhel-8-x64']
-jvmoptsMap['min-bullseye-x64']   = jvmoptsMap['min-rhel-8-x64']
+jvmoptsMap['min-bullseye-x64']   = '-Xmx512m -Xms512m --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
 jvmoptsMap['min-bookworm-x64']   = '-Xmx512m -Xms512m --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
+jvmoptsMap['min-trixie-x64']     = '-Xmx512m -Xms512m --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
 
 jvmoptsMap['min-ol-8-arm64']     = jvmoptsMap['min-rhel-8-x64']
 jvmoptsMap['min-ol-9-arm64']     = jvmoptsMap['min-rhel-8-x64']
-jvmoptsMap['min-focal-arm64']    = jvmoptsMap['min-rhel-8-x64']
+jvmoptsMap['min-alma-10-arm64']  = jvmoptsMap['min-rhel-8-x64']
 jvmoptsMap['min-jammy-arm64']    = jvmoptsMap['min-rhel-8-x64']
 jvmoptsMap['min-noble-arm64']    = jvmoptsMap['min-rhel-8-x64']
-jvmoptsMap['min-bullseye-arm64'] = jvmoptsMap['min-rhel-8-x64']
+jvmoptsMap['min-bullseye-arm64'] = '-Xmx512m -Xms512m --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
 jvmoptsMap['min-bookworm-arm64'] = '-Xmx512m -Xms512m --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
+jvmoptsMap['min-trixie-arm64']   = '-Xmx512m -Xms512m --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
 
 // https://github.com/jenkinsci/ec2-plugin/blob/ec2-1.41/src/main/java/hudson/plugins/ec2/SlaveTemplate.java
 // https://javadoc.jenkins.io/plugin/ec2/index.html?hudson/plugins/ec2/UnixData.html
@@ -417,18 +420,20 @@ String region = 'us-east-2'
             getTemplate('min-ol-8-x64',        "${region}${it}"),
             getTemplate('min-rhel-9-x64',      "${region}${it}"),
             getTemplate('min-ol-9-x64',        "${region}${it}"),
-            getTemplate('min-focal-x64',       "${region}${it}"),
+            getTemplate('min-alma-10-x64',     "${region}${it}"),
             getTemplate('min-jammy-x64',       "${region}${it}"),
             getTemplate('min-noble-x64',       "${region}${it}"),
             getTemplate('min-bullseye-x64',    "${region}${it}"),
             getTemplate('min-bookworm-x64',    "${region}${it}"),
+            getTemplate('min-trixie-x64',      "${region}${it}"),
             getTemplate('min-ol-8-arm64',      "${region}${it}"),
             getTemplate('min-ol-9-arm64',      "${region}${it}"),
-            getTemplate('min-focal-arm64',     "${region}${it}"),
+            getTemplate('min-alma-10-arm64',   "${region}${it}"),
             getTemplate('min-jammy-arm64',     "${region}${it}"),
             getTemplate('min-noble-arm64',     "${region}${it}"),
             getTemplate('min-bullseye-arm64',  "${region}${it}"),
             getTemplate('min-bookworm-arm64',  "${region}${it}"),
+            getTemplate('min-trixie-arm64',    "${region}${it}"),
         ],                                       // List<? extends SlaveTemplate> templates
         '',
         ''
